# whatsapp_framework

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: deploy-docs.yml
docs/: index.md  setup_whatsapp.md
examples/: example.py  main.py
examples/restaurant_attendant/: pyproject.toml
examples/restaurant_attendant/restaurant_attendant/: __main__.py  database.py  main.py  payments.py  tasks.py
search/: search_index.json
setup_whatsapp/: index.html
whatsapp/: __init__.py  _datastore.py  _handle_verfication.py  _history.py  _types.py  agent_interface.py  chat.py  conversation.py  conversation_handler.py  events.py  index.html  message.py  reply_message.py  utils.py
