[tool.poetry]
name = "whatsapp-py"
description = ""
version = "0.1.0"
authors = ["Damian Akpan <damiakpan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyngrok = "^7.2.0"
requests = "^2.32.3"
pydantic = "^2.9.1"
werkzeug = "^3.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
