[tool.poetry]
name = "whatsapp-framework"
version = "0.1.11"
description = "Whatsapp framework simplifies building and deploying whatsapp based application"
authors = ["Damian Akpan <damiakpan@gmail.com>"]
readme = "README.md"
keywords = ["whatsapp", "chatbot"]
repository = "https://github.com/raven-consult/whatsapp_framework"

classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

packages = [
    { include = "whatsapp" }
]


[tool.poetry.dependencies]
python = ">=3.8"
pyngrok = "^7.2.0"
requests = "^2.32.3"
pydantic = "^2.9.1"
werkzeug = "^3.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
